apps/base/octave-client/octave-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octave-client-service
  labels:
    app: octave-client
spec:
  selector:
    app: octave-client
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
